After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 682045 - Various Telepathy fixes
Various Telepathy fixes
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
Depends on:
Blocks:
 
 
Reported: 2012-08-16 21:35 UTC by Jasper St. Pierre (not reading bugmail)
Modified: 2012-08-17 01:04 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
messageTray: Defer creation of mainIcon (1.94 KB, patch)
2012-08-16 21:36 UTC, Jasper St. Pierre (not reading bugmail)
reviewed Details | Review
telepathyClient: Remove some obsolete wrappers (4.68 KB, patch)
2012-08-16 21:36 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review
telepathyClient: Pass the right amount of parameters (1.39 KB, patch)
2012-08-16 21:36 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review
telepathyClient: Pass a proper launch client to launch empathy-accounts (1002 bytes, patch)
2012-08-16 21:36 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review
messageTray: Defer creation of mainIcon (1.96 KB, patch)
2012-08-17 00:52 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review

Description Jasper St. Pierre (not reading bugmail) 2012-08-16 21:35:58 UTC
Including a fix for telepathy chats, which broke after the screen shield landing.
Comment 1 Jasper St. Pierre (not reading bugmail) 2012-08-16 21:36:01 UTC
Created attachment 221482 [details] [review]
messageTray: Defer creation of mainIcon

We need to make sure the Source is fully constructed before creating
mainIcon, as SourceActor will query the count of the source.

This fixes Telepathy Chats.
Comment 2 Jasper St. Pierre (not reading bugmail) 2012-08-16 21:36:04 UTC
Created attachment 221483 [details] [review]
telepathyClient: Remove some obsolete wrappers

gjs can handle these cases natively now
Comment 3 Jasper St. Pierre (not reading bugmail) 2012-08-16 21:36:07 UTC
Created attachment 221484 [details] [review]
telepathyClient: Pass the right amount of parameters
Comment 4 Jasper St. Pierre (not reading bugmail) 2012-08-16 21:36:10 UTC
Created attachment 221485 [details] [review]
telepathyClient: Pass a proper launch client to launch empathy-accounts
Comment 5 Giovanni Campagna 2012-08-16 21:39:53 UTC
Review of attachment 221482 [details] [review]:

::: js/ui/messageTray.js
@@ +1178,3 @@
+    _ensureMainIcon: function(icon) {
+        if (this._mainIcon)
+            return false;

You're returning false here, and undefined at the end.
This triggers a JS warning, and makes the check in _setSummaryIcon always true.
Comment 6 Giovanni Campagna 2012-08-16 21:43:13 UTC
Review of attachment 221483 [details] [review]:

Sure!
Comment 7 Giovanni Campagna 2012-08-16 21:45:32 UTC
Review of attachment 221484 [details] [review]:

Minor nit

::: js/ui/telepathyClient.js
@@ +1349,3 @@
                         + ' --select-account=%s'
                         .format(account.get_path_suffix());
+                let app_info = Gio.app_info_create_from_commandline(cmd, null, 0);

Gio.AppInfoCreateFlags.NONE
Comment 8 Giovanni Campagna 2012-08-16 21:45:53 UTC
Review of attachment 221485 [details] [review]:

.
Comment 9 Jasper St. Pierre (not reading bugmail) 2012-08-17 00:52:19 UTC
Created attachment 221537 [details] [review]
messageTray: Defer creation of mainIcon

We need to make sure the Source is fully constructed before creating
mainIcon, as SourceActor will query the count of the source.

This fixes Telepathy Chats.
Comment 10 Giovanni Campagna 2012-08-17 00:58:09 UTC
Review of attachment 221537 [details] [review]:

LGTM
Comment 11 Giovanni Campagna 2012-08-17 00:59:33 UTC
Review of attachment 221537 [details] [review]:

LGTM
Comment 12 Jasper St. Pierre (not reading bugmail) 2012-08-17 01:03:54 UTC
Attachment 221483 [details] pushed as addb247 - telepathyClient: Remove some obsolete wrappers
Attachment 221484 [details] pushed as a004ad6 - telepathyClient: Pass the right amount of parameters
Attachment 221485 [details] pushed as 3042e64 - telepathyClient: Pass a proper launch client to launch empathy-accounts
Attachment 221537 [details] pushed as 8f129e1 - messageTray: Defer creation of mainIcon