telepathyClient: Remove some obsolete wrappers

gjs can handle these cases natively now

https://bugzilla.gnome.org/show_bug.cgi?id=682045